--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <%= include_gon %>
   <title>WaterData</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <script src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyAuBy0caNu5eU25w8-IvFx8RFtL2A1GwXQ"></script
 </head>
   <body>
       <% if user_signed_in? %>
