--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -6,6 +6,10 @@
       <%= f.text_field :name, class: "form-control" %>
       <%= f.label :description %>
       <%= f.text_field :description, class: "form-control" %>
+      <%= f.label "Latitude" %>
+      <%= f.text_field :lat, class: "form-control" %>
+      <%= f.label "Longitude" %>
+      <%= f.text_field :long, class: "form-control" %>
       <%= render "shared/error_messages", object: f.object %>
       <%= f.submit "Add location", class: "btn btn-success" %>
     </div>
