--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,18 +1,28 @@
-<div class = "col-xs-6 col-xs-offset-3">
-  <h1>Add a location</h1>
-  <%= form_for @location do |f| %>
-    <div class = "form-group">
-      <%= f.label :name %>
-      <%= f.text_field :name, class: "form-control" %>
-      <%= f.label :description %>
-      <%= f.text_field :description, class: "form-control" %>
-      <%= f.label "Latitude" %>
-      <%= f.text_field :lat, class: "form-control" %>
-      <%= f.label "Longitude" %>
-      <%= f.text_field :long, class: "form-control" %>
-      <%= render "shared/error_messages", object: f.object %>
-      <%= f.submit "Add location", class: "btn btn-success" %>
-    </div>
+<div class = "row">
+  <div class = "col-xs-6">
+    <h1>Add a location</h1>
+    <%= form_for @location do |f| %>
+      <div class = "form-group">
+        <%= f.label :name %>
+        <%= f.text_field :name, class: "form-control" %>
+        <%= f.label :description %>
+        <%= f.text_field :description, class: "form-control" %>
+        <%= f.label "Latitude" %>
+        <%= f.text_field :lat, class: "form-control" %>
+        <%= f.label "Longitude" %>
+        <%= f.text_field :long, class: "form-control" %>
+        <%= render "shared/error_messages", object: f.object %>
+        <%= f.submit "Add location", class: "btn btn-success" %>
+      </div>
 
-  <% end %>
+    <% end %>
+  </div>
+  <div class = "col-xs-6">
+    <div class = "map-button-container">
+      <button class = "btn btn-primary" id = "remove-marker">Remove Marker</button>
+    </div>
+    <div id = "new-location-map-container">
+      <div id = "new-location-map-canvas"></div>
+    </div>
+  </div>
 </div>
