maps are page specific

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
           <div class = "collapse navbar-collapse" id = "navbar-content">
             <ul class = "nav navbar-nav">
               <li><%= link_to "Add Location", new_location_path %></li>
+              <li><%= link_to "Map", map_path %></li>
             </ul>
             <ul class = "nav navbar-nav navbar-right">
               <% if user_signed_in? %>
