--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -18,11 +18,9 @@
     <% end %>
   </div>
   <div class = "col-xs-6">
-    <div class = "map-button-container">
-      <button class = "btn btn-primary" id = "remove-marker">Remove Marker</button>
-    </div>
     <div id = "new-location-map-container">
       <div id = "new-location-map-canvas"></div>
     </div>
   </div>
 </div>
+<%= javascript_tag "newLocation()" %>
